# embassy-uefi

./: Cargo.toml  README.md  rust-toolchain.toml
examples/: fizzbuzz.rs  ping.rs
scripts/: test_on_qemu.sh
src/: lib.rs  time.rs
